Cleaned up code

--- a/Cortes_SignatureSearch.Rmd
+++ b/Cortes_SignatureSearch.Rmd
@@ -546,7 +546,7 @@ top_pathways
 ggsave(filename = "210706_SignatureSearch_TopPathways.pdf", top_pathways)
 ```
 
-## END  
+### END  
 Location of final scripts:
 Locally /Users/eramsey/Desktop/R21_210302/PreliminaryR21/signatureSearch_outputs/  
   
